 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.5rc1
 
 - [ZBX-3352] made item Y axis min/max items also change when used in screen with Dynamic enabled (Vedmak)
 - [ZBX-3523] fixed error when open monitoring->maps and last viewed map was removed (Vedmak)
 - [ZBX-3557] fixed possible incorrect usage of internal array pointers in frontend (Aly)
 - [ZBX-2979] fixed trigger function time() test (Aly)
 - [ZBX-3563] fixed host group filter in graph selection popup (Aly)
 - [ZBX-3544] fixed user login method reseting attempts (Aly)
 - [ZBX-3555] fixed possible pollers hang while processing ssh.run[] checks (Sasha)
 - [ZBXNEXT-408] added zabbix[process,...] internal checks (Sasha)
 - [ZBX-2262] added `hosts_templates_2' index (Sasha)
 - [ZBX-3537] trigger events are now sorted by timestamp (KB)
 - [ZBX-3472] changed item and discovery rule form to display SSH and SNMPv3 auth fields correctly when changing item type (KB)
 - [ZBX-3542] reduced the amount of debugging output for configuration cache (asaveljevs)
 - [ZBX-3536] made SNMP checks work when DNS resolves to IPv6 address; thanks to Marc Dequènes (asaveljevs,Sasha)
 - [ZBX-3541] fixed processing of nodata() function (Sasha)
 - [ZBX-3126] all checkboxes in map and screen import are now "on" by default (KB)
 - [ZBX-3158] improved links in map element menu (Aly)
 - [ZBX-3532] fixed add item to trigger expression from popup menu (Vedmak,Vlad)
 - [ZBX-1357] fixed confusing date format in network maps (Richlv)
 - [ZBX-3516] fixed items and hosts disappearing from configuration cache indexes (asaveljevs)
 - [ZBX-3479] fixed possible hang of agents while processing scripts or net.tcp.service* checks (Sasha)
 - [ZBX-3514] fixed log trigger wizard (Aly)